# SkiaTest

./: .gitignore  CMakeLists.txt
_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SkiaTest.sln  SkiaTest.vcxproj  SkiaTest.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
_build/Debug/: SkiaTest.ilk
_build/SkiaTest.dir/Debug/SkiaTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
_build/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
libs/skia/lib/: zlib_x86.lib
libs/skia/lib/release/: expat.lib  harfbuzz.lib  libjpeg.lib  libpng.lib  libwebp.lib  libwebp_sse41.lib  particles.lib  pathkit.lib  sfntly.lib  skottie.lib  sksg.lib  zlib.lib
src/: HelloWindowsDesktop.cpp  HelloWorld.cpp  SkiaSDLExample.cpp  SkiaTestConfig.h.in  main.cpp
